# BlueBeacon

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.simple  README.md  pyproject.toml  setup.py
src/bluebeacon/: __init__.py  cli.py  detector.py  ping.py
test/: __init__.py  test_cli.py  test_detector.py  test_ping.py
