[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluebeacon"
version = "0.2.0"
description = "A Docker healthcheck utility for Minecraft servers"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE"
]
authors = [
    {name = "BlueBeacon Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcstatus>=12.0.0",
    "click>=8.1.0",
    "javaproperties>=0.8.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "types-pexpect>=4.0.0",
    "types-pygments>=2.0.0",
    "types-pyyaml>=6.0.0",
    "mypy-gitlab-code-quality>=1.0.0",
    "colorama>=0.4.0",
]

[project.scripts]
bluebeacon = "bluebeacon.cli:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"